jump to time solved

--- a/assets/css/media-player.css
+++ b/assets/css/media-player.css
@@ -130,7 +130,7 @@ margin-top: 0px;
 #progress-bar{
 	color:#fff;
 	font-size:12px;
-	/*width:300px;*/
+	width:100%;
 	height:8px;
 	border:none;
 	/*margin-right:5px;*/
